--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ppjz6l');
-  src:  url('fonts/icomoon.eot?ppjz6l#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ppjz6l') format('truetype'),
-    url('fonts/icomoon.woff?ppjz6l') format('woff'),
-    url('fonts/icomoon.svg?ppjz6l#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?8x5i28');
+  src:  url('fonts/icomoon.eot?8x5i28#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?8x5i28') format('truetype'),
+    url('fonts/icomoon.woff?8x5i28') format('woff'),
+    url('fonts/icomoon.svg?8x5i28#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -52,6 +52,9 @@
 .icon-polaroid:before {
   content: "\e901";
 }
+.icon-chevron-up:before {
+  content: "\e90d";
+}
 .icon-camera1:before {
   content: "\e902";
 }
@@ -84,6 +87,9 @@
 }
 .icon-close1:before {
   content: "\e90c";
+}
+.icon-books:before {
+  content: "\e920";
 }
 .icon-video-camera:before {
   content: "\e914";
